--- a/app/views/admin_chatposts.scala.html
+++ b/app/views/admin_chatposts.scala.html
@@ -17,6 +17,7 @@
 
                                     <ul class="list-group  list-group-horizontal-sm">
 
+                                           @if( !inquiry.isEmpty && inquiry != null){
                                            @for(inquiry <- inquiry){
                                             <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action list-group-item-info">
                                                 <h5>@inquiry.agent.applicant.agent.fullname: </h5> @inquiry.message <span>&nbsp;</span> <br> @inquiry.created_at
@@ -28,6 +29,9 @@
                                                 <h5>You: </h5> @inquiry.reply <span>&nbsp;</span> <br> @inquiry.replied_at
                                            </li>
                                            }
+                                           }
+                                           }else{
+                                           <p>No inquiry available</p>
                                            }
                                     </ul>
                                     <form class="col-sm-offset-2" action="/agent/inquiry/reply" autocomplete="off" id="" method="POST" >
