--- a/app/views/navigation.scala.html
+++ b/app/views/navigation.scala.html
@@ -4,7 +4,7 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand " href="/">Welcome</a>
+    <a class="navbar-brand " href="#">Welcome</a>
     <div class="collapse navbar-collapse" id="navbarExample">
         <ul class="sidebar-nav navbar-nav">
             @if(session.get("agentlog")){
@@ -72,7 +72,7 @@
 
 
                  <li class="nav-item active">
-                     <a class="nav-link" href="/signin/agent"><i class=""></i>Agent Dashboard</a>
+                     <a class="nav-link" href="/applied/agent"><i class=""></i>Agent Dashboard</a>
                  </li>
 
                          <li class="nav-item">
