--- a/app/views/admin_agentinquiries.scala.html
+++ b/app/views/admin_agentinquiries.scala.html
@@ -19,19 +19,34 @@
 
 
                                     <ul class="list-group  list-group-horizontal-sm">
-                                        @if(AgentsInquiry.FindChatSender !=null && !AgentsInquiry.FindChatSender.isEmpty()){
-                                        @for(AgentsInquiries <- AgentsInquiry.FindChatSender){
-                                         <a href="@routes.AdminDashboard.ChatDetails(id)@AgentsInquiries.agent.applicant.id" class="mylink" >
-                                                  <input type="hidden" value="@AgentsInquiries.agent.applicant.id" id="link">
-                                                <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action list-group-item-default">
-                                                @AgentsInquiries.agent.applicant.agent.fullname
-                                      @*<span class="badge badge-danger badge-pill">2</span>*@
+                      @if(ApprovedAgents.FindChatSender !=null && !ApprovedAgents.FindChatSender.isEmpty()){
+                                        @for(sender <- ApprovedAgents.FindChatSender() ) {
 
-                                            </li>
-                                         </a>
-                                        }
-                                        }else{
-                                            <p>No chat available</p>
+                                       <a href="@routes.AdminDashboard.ChatDetails(id)@sender.approved.id" class="mylink" >
+                                 <input type="hidden" value="@sender.approved.id" id="link">
+                         <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action list-group-item-default py-2"  >
+                                                 @sender.approved.applicant.firstname
+                                            @if(sender.reply_status == false){
+
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                  <span class="badge badge-danger badge-pill ml-2"> @AgentsInquiry.Unread unread message (s)</span><br>
+                                                  <span class="badge badge-success "> Telecom company : @sender.approved.applicant.company</span>
+                                             }else{
+                                                <span class="badge badge-info badge-pill">readed</span>
+                                            }
+                               }
+                                  </li>
+                                  </a>
+                            @*<div id="pagination2" class="pagination">   *@@*pagination*@@*
+                                              <ul>
+                                              @for(i <- 0 until ApprovedAgents.FindChatSender.getTotalPageCount()){
+                                                  <li><a  href="@link(i, null)">@(i+1)</a></li>
+                                              }
+                                              </ul>
+                                          </div>*@
+
+                                       }else{
+                                           <p>No chat available</p>
                                         }
                                     </ul>
                                 </div>
