--- a/app/views/agent_chat.scala.html
+++ b/app/views/agent_chat.scala.html
@@ -18,12 +18,12 @@
                                     <ul class="list-group  list-group-horizontal-sm">
                                 @if( (inquiry != null) && (!inquiry.isEmpty) ){
                                 @for(InqueryMessage <- inquiry) {
-                                    @if((Long.parseLong(session().get("agentlog")) ) == (InqueryMessage.agent.id)){
+                                    @if((Long.parseLong(session().get("agentlog")) ) == (InqueryMessage.approved.id)){
                                     <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action list-group-item-warning">
                                         <h5>You: </h5>   @InqueryMessage.message <span>&nbsp;</span> <br> @InqueryMessage.created_at
                                     </li>
                                    }
-                                    @if( ((Long.parseLong(session().get("agentlog"))) == (InqueryMessage.agent.id) ) && (InqueryMessage.reply_status==true) ){
+                                    @if( ((Long.parseLong(session().get("agentlog"))) == (InqueryMessage.approved.id) ) && (InqueryMessage.reply_status==true) ){
                                     <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action list-group-item-success">
                                        <h5>Feedback: </h5> @InqueryMessage.reply <span>&nbsp;</span> <br> @InqueryMessage.replied_at
                                     </li>
