--- a/app/views/admin_agentinquiries.scala.html
+++ b/app/views/admin_agentinquiries.scala.html
@@ -25,25 +25,22 @@
                                        <a href="@routes.AdminDashboard.ChatDetails(id)@sender.approved.id" class="mylink" >
                                  <input type="hidden" value="@sender.approved.id" id="link">
                          <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action list-group-item-default py-2"  >
-                                                 @sender.approved.applicant.firstname
-                                            @if(sender.reply_status == false){
+                                                 @sender.approved.applicant.firstname <br>
+                         <span class="badge badge-success "> Telecom company : @sender.approved.applicant.company</span>
 
-                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                                  <span class="badge badge-danger badge-pill ml-2"> @AgentsInquiry.Unread unread message (s)</span><br>
-                                                  <span class="badge badge-success "> Telecom company : @sender.approved.applicant.company</span>
-                                             }else{
-                                                <span class="badge badge-info badge-pill">readed</span>
-                                            }
+
+
+                             @*  @if(AgentsInquiry.Unread !=null ){
+                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                <span class="badge badge-danger badge-pill ml-2"> unread message (s)</span>
+                                    }else{
+                                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        <span class="badge badge-info badge-pill">readed</span><br>
+                                     }*@
+
                                }
                                   </li>
                                   </a>
-                            @*<div id="pagination2" class="pagination">   *@@*pagination*@@*
-                                              <ul>
-                                              @for(i <- 0 until ApprovedAgents.FindChatSender.getTotalPageCount()){
-                                                  <li><a  href="@link(i, null)">@(i+1)</a></li>
-                                              }
-                                              </ul>
-                                          </div>*@
 
                                        }else{
                                            <p>No chat available</p>
