--- a/app/views/agent_chat.scala.html
+++ b/app/views/agent_chat.scala.html
@@ -24,7 +24,7 @@
                                     </li>
                                    }
                                     @if( ((Long.parseLong(session().get("agentlog"))) == (InqueryMessage.approved.id) ) && (InqueryMessage.reply_status==true) ){
-                                    <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action list-group-item-success">
+                                    <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action list-group-item-success" style="border-bottom-left-radius: 20px; border-top-right-radius: 20px;">
                                        <h5>Feedback: </h5> @InqueryMessage.reply <span>&nbsp;</span> <br> @InqueryMessage.replied_at
                                     </li>
                                     }
