final modification where login does not use hashed passwords

--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -2,18 +2,19 @@
 
 @views.html.navigation("message")
 
-    <div class="content-wrapper py-3">
-         <div class="container-fluid">
-            <div class="row trak_map_page">
-                <div class="page-header" style="background-image: url('@routes.Assets.at("images/vehicle3.jpg")')">
+
+    <div class="content-wrapper py-3"  >
+        <div class="" style="margin-left: 5% ;"><br>
+            <h2 class="text-primary center col-md-offset-4" > Welcome to Telecom Agent Management System admin dashboard</h2>
+        </div>
+
+        <div class="container-fluid" style="background-image: url('@routes.Assets.at("images/admin-dashboard2.png")'); ">
+            <div class="row trak_map_page" >
+                <div class="page-header" >
 
 
 
-            <div class=" col-md-12  "><br>
-                    <h2 class="text-primary center col-md-offset-2"> Welcome to Telecom Agent Management System admin dashboard</h2>
 
-
-         </div>
                 </div>
             </div>
         </div>
