--- a/app/views/application_agent.scala.html
+++ b/app/views/application_agent.scala.html
@@ -61,7 +61,7 @@
                                         id="agglomeration"
                                         class="form-control"
                                         type="text"
-                                        placeholder="Enter agglomeration name">
+                                        placeholder="Enter village name">
                                 </div>
                                    </div>
 
