--- a/app/views/indexheader.scala.html
+++ b/app/views/indexheader.scala.html
@@ -15,7 +15,7 @@
 
         <div class="logo float-left">
                 <!-- Uncomment below if you prefer to use an image logo -->
-            <h1 class="text-light"><a href="#intro" class="scrollto"><span>TAMS</span></a></h1>
+            <h1 class="text-light"><a href="#intro" class="scrollto"><span>TAMS  KICUKIRO DISTRICT</span></a></h1>
         </div>
 
         <nav class="main-nav float-right d-none d-lg-block">
@@ -47,7 +47,7 @@
             </div>
 
             <div class="col-md-6 intro-img order-md-last order-first">
-                <img src="@routes.Assets.at("images/intro-img.svg")" alt="" class="img-fluid">
+                <img src="@routes.Assets.at("images/MOBILE-MONEY.jpg")" alt="" class="img-fluid">
             </div>
         </div>
 
