--- a/app/views/admin_applicantsdecision.scala.html
+++ b/app/views/admin_applicantsdecision.scala.html
@@ -408,7 +408,7 @@
                             </div>
                             <div class="modal-body ">
 
-                <form class=" mt-5"  method="post" id="" action="/manage/decision/update" enctype="multipart/form-data"  >
+                <form class=" mt-5"  method="post" id="myupdate" action="/manage/decision/update" enctype="multipart/form-data"  >
                     <input type="text" id="id2" placeholder="iduser" name="id2" hidden>
                     <input type="text" id="idnumber2" placeholder="idnumber2" name="idnumber2" hidden>
 
